--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>org.lzq</groupId>
     <artifactId>LZQBlog</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>lzq-framework</module>
+        <module>lzq-admin</module>
+        <module>lzq-blog</module>
     </modules>
 
     <properties>
